--- a/public/offline.html
+++ b/public/offline.html
@@ -15,6 +15,7 @@
             align-items: center;
             background-color: var(--bg);
             gap: 15px;
+            flex-direction: column;
             
         }
 
