--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <body>
     <noscript>Wema ummah.</noscript>
     <div id="root"></div>
-    <script>
+    <script type="module">
       import {Workbox} from 'https://storage.googleapis.com/workbox-cdn/releases/4.1.0/workbox-window.prod.mjs';
 
       function createUIPrompt(opts) {
