--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
       if ('serviceWorker' in navigator) {
         const wb = new Workbox('/serviceworker.js');
-        wb.addEventListener('waiting', (event) => {
+        wb.addEventListener('load', (event) => {
           const prompt = createUIPrompt({
             onAccept: async () => {
               wb.addEventListener('controlling', (event) => {
