--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
       if ('serviceWorker' in navigator) {
         const wb = new Workbox('/serviceworker.js');
-        wb.addEventListener('load', (event) => {
+        wb.addEventListener('waiting', (event) => {
           const prompt = createUIPrompt({
             onAccept: async () => {
               wb.addEventListener('controlling', (event) => {
@@ -41,13 +41,13 @@
         });
         wb.register();
       }
-      // if('serviceWorker' in navigator) {
-      //   window.addEventListener('load', () => {
-      //     navigator.serviceWorker.register('./serviceworker.js')
-      //     .then((reg) => console.log('Success: ', reg.scope))
-      //     .catch((err) => console.log('Failure: ', err))
-      //   })
-      // }    
+      if('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('./serviceworker.js')
+          .then((reg) => console.log('Success: ', reg.scope))
+          .catch((err) => console.log('Failure: ', err))
+        })
+      }    
     </script>
   </body>
 </html>
