--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,14 @@
   <body>
     <noscript>Wema ummah.</noscript>
     <div id="root"></div>
-    <script type="module">
-      import {Workbox} from 'https://storage.googleapis.com/workbox-cdn/releases/4.1.0/workbox-window.prod.mjs';
+    <script >
+      // import {Workbox} from 'https://storage.googleapis.com/workbox-cdn/releases/4.1.0/workbox-window.prod.mjs';
 
-      function createUIPrompt(opts) {
-        if (confirm('Upades mpya zinapatikana. Je, ungependa kuupdate sasa?')) {
-          opts.onAccept()
-        }
-      }
+      // function createUIPrompt(opts) {
+      //   if (confirm('Upades mpya zinapatikana. Je, ungependa kuupdate sasa?')) {
+      //     opts.onAccept()
+      //   }
+      // }
 
       if ('serviceWorker' in navigator) {
         const wb = new Workbox('/serviceworker.js');
@@ -41,13 +41,13 @@
         });
         wb.register();
       }
-      if('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./serviceworker.js')
-          .then((reg) => console.log('Success: ', reg.scope))
-          .catch((err) => console.log('Failure: ', err))
-        })
-      }    
+      // if('serviceWorker' in navigator) {
+      //   window.addEventListener('load', () => {
+      //     navigator.serviceWorker.register('./serviceworker.js')
+      //     .then((reg) => console.log('Success: ', reg.scope))
+      //     .catch((err) => console.log('Failure: ', err))
+      //   })
+      // }    
     </script>
   </body>
 </html>
