--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Muslem Ummah App"
     />
-    <link rel="apple-touch-icon" href="./images/logo_512.png" />
+    <link rel="apple-touch-icon" href="./images/logo_512_1.png" />
   
     <link rel="manifest" href="./manifest.json" />
    
