--- a/public/offline.html
+++ b/public/offline.html
@@ -5,11 +5,11 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/logo80.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />   
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->   
-    <title>Wema</title>
+    <title>Wema Forum</title>
     <style>
         .offline{
             width: 100vw;
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -27,6 +27,7 @@
         .offline span{
             color: #aaa;
             font-size: 2rem;
+            text-align: justify;
         }
     </style>
   </head>
