--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,12 @@
    
     <title>Wema</title>
   </head>
-  <body>
+  <body>    
     <noscript>Wema Forum.</noscript>
     <div id="root"></div>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%&libraries=places"></script>
     <script >
+       
       // import {Workbox} from 'https://storage.googleapis.com/workbox-cdn/releases/4.1.0/workbox-window.prod.mjs';
 
       // function createUIPrompt(opts) {
